--- a/build.yaml
+++ b/build.yaml
@@ -26,7 +26,7 @@ include:
 
   # Corne keyboard halves with built-in OLED displays
   - board: nice_nano_v2
-    shield: cornepat_left
+    shield: corne_hw_left
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
-    shield: cornepat_right
+    shield: corne_hw_right
