--- a/boards/shields/corne_hw_left/corne_hw.dtsi
+++ b/boards/shields/corne_hw_left/corne_hw.dtsi
@@ -54,12 +54,11 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
         wakeup-source;
         diode-direction = "row2col";
         
-        // Placeholder row definitions - will be overridden in overlay files
         row-gpios
-            = <&gpio1 0 GPIO_ACTIVE_HIGH>  // Row 0
-            , <&gpio0 11 GPIO_ACTIVE_HIGH> // Row 1  
-            , <&gpio1 4 GPIO_ACTIVE_HIGH>  // Row 2
-            , <&gpio1 6 GPIO_ACTIVE_HIGH>  // Row 3
+            = <&pro_micro 0 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 4 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
+            , <&pro_micro 6 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
             ;
     };
 };
